--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,12 @@
 {
     "version": 2,
-    "rewrites": [
+    "builds":[
+        {"src":"*.js", "use":"@vercel/node"}
+    ],
+    "routes":[
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "src":"/(.*)",
+            "dest":"/"
         }
     ]
 }
